--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-project",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "keywords": [],
@@ -18,17 +18,19 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "webpack": "5.75.0",
-    "webpack-cli": "4.10.0",
-    "@babel/preset-react": "7.18.6",
-    "babel-loader": "8.2.5",
     "@babel/core": "7.19.6",
     "@babel/preset-env": "7.19.4",
-    "core-js": "3.27.2",
-    "regenerator-runtime": "0.13.11",
+    "@babel/preset-react": "7.18.6",
     "@babel/preset-typescript": "7.18.6",
-    "typescript": "^4.9.4",
     "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10"
+    "@types/react-dom": "18.0.10",
+    "babel-loader": "8.2.5",
+    "core-js": "3.27.2",
+    "css-loader": "^6.7.3",
+    "regenerator-runtime": "0.13.11",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.9.4",
+    "webpack": "5.75.0",
+    "webpack-cli": "4.10.0"
   }
 }
