--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-project",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "",
   "main": "index.js",
   "keywords": [],
@@ -27,6 +27,7 @@
     "babel-loader": "8.2.5",
     "core-js": "3.27.2",
     "css-loader": "^6.7.3",
+    "prop-types": "^15.8.1",
     "regenerator-runtime": "0.13.11",
     "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
